# cargese2025

./: README.md  cargese2025.py  cargese2025_venafro.py  main.py  monti_pisani.py  monti_pisani_dem.tif  monti_pisani_veg.tif  pyproject.toml  simple_example.py  utils.py  venafro.py  venafro_dem.tif  venafro_scar.tif  venafro_veg.tif
